Move globe map further up to prevent covering status text
Changed top offset from -30% to -55% on .globe-map

--- a/src/style.css
+++ b/src/style.css
@@ -216,7 +216,7 @@ body {
 
 .globe-map {
   position: absolute;
-  top: -30%;
+  top: -55%;
   left: 50%;
   transform: translateX(-50%);
   width: 115%;
